<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Mg2-sa-i5K">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Name Input View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="NameInputViewController" customModule="Demo" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="knowit" translatesAutoresizingMaskIntoConstraints="NO" id="tJ6-2i-lte">
                                <rect key="frame" x="93.5" y="74" width="187.5" height="187.5"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="tJ6-2i-lte" secondAttribute="height" multiplier="1:1" id="oAO-r9-Wz4"/>
                                </constraints>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="RzP-gJ-ujV">
                                <rect key="frame" x="19" y="271.5" width="337.5" height="116"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zw8-eB-v5H">
                                        <rect key="frame" x="106" y="0.0" width="125.5" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter first and last name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DWP-Zq-jPC">
                                        <rect key="frame" x="76" y="25.5" width="186" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q0T-yQ-I8u">
                                        <rect key="frame" x="0.0" y="51" width="337.5" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QZG-he-1FS">
                                        <rect key="frame" x="144.5" y="86" width="49" height="30"/>
                                        <state key="normal" title="Submit"/>
                                        <connections>
                                            <action selector="submitTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="s8Q-AD-gsS"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="tJ6-2i-lte" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="5U9-h2-Nke"/>
                            <constraint firstItem="RzP-gJ-ujV" firstAttribute="top" secondItem="tJ6-2i-lte" secondAttribute="bottom" constant="10" id="6XI-sf-L3g"/>
                            <constraint firstItem="RzP-gJ-ujV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9da-d6-5Uj"/>
                            <constraint firstItem="tJ6-2i-lte" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QuI-Ol-fGT"/>
                            <constraint firstItem="q0T-yQ-I8u" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.9" id="Ssy-xe-bCY"/>
                            <constraint firstItem="tJ6-2i-lte" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="hUe-cf-xI0"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="uxU-fU-zHP"/>
                    <connections>
                        <outlet property="nameError" destination="DWP-Zq-jPC" id="JT0-u7-6s4"/>
                        <outlet property="nameTextField" destination="q0T-yQ-I8u" id="eq3-OM-O2g"/>
                        <segue destination="Wz7-Jz-f4d" kind="show" identifier="showWorksScreen" id="o0Z-PJ-KY8"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="964" y="36.431784107946029"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="GUM-Mj-dw2">
            <objects>
                <viewController id="Wz7-Jz-f4d" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Nts-mH-UtA"/>
                        <viewControllerLayoutGuide type="bottom" id="DZn-cV-iHW"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Yer-QG-Yx4">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Works" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ig-zi-6U8">
                                <rect key="frame" x="163" y="323" width="48" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="4ig-zi-6U8" firstAttribute="centerX" secondItem="Yer-QG-Yx4" secondAttribute="centerX" id="1yh-HF-afu"/>
                            <constraint firstItem="4ig-zi-6U8" firstAttribute="centerY" secondItem="Yer-QG-Yx4" secondAttribute="centerY" id="nSb-fw-eaw"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="VhD-kF-K0t" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1780" y="36"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="oX5-4s-VkU">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Mg2-sa-i5K" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6x5-DX-N4A">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Ggf-87-G0f"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ziQ-dj-9k1" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="242" y="36"/>
        </scene>
    </scenes>
    <resources>
        <image name="knowit" width="200" height="200"/>
    </resources>
</document>
